# yubihsm-share-converter

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.github/: RELEASE_NOTES.md  dependabot.yml
.github/docker-pins/: Dockerfile
.github/workflows/: cachegrind.yml  ci.yml  codeql.yml  cryptol-proofs.yml  fuzz.yml  miri.yml  mutants.yml  proof-digests.env  release.yml  reprobuild.yml  saw-proofs.yml  scorecards.yml
benches/: cachegrind_kernels.rs  dudect_kernels.rs  memcheck_kernels.rs
docs/: CRYPTO-SPEC.md  CT-VERIFICATION-LOCAL.md  MIRI-MAINTENANCE.md  THREAT-MODEL.md
fuzz/: Cargo.toml
fuzz/corpus_seed/parse/: seed_001_valid_2_of_3.txt  seed_002_valid_5_of_8.txt  seed_003_valid_10_of_31.txt  seed_004_malformed_leading_ws.txt  seed_005_truncated_at_byte_30.txt
fuzz/corpus_seed/recover/: seed_001_2_of_3_triple.txt  seed_002_5_of_8_set.txt
fuzz/fuzz_targets/: parse.rs  recover.rs  resplit.rs
saw/: MAINTENANCE.md  README.md  lagrange-offline.saw  yubihsm-share-converter.saw
saw/extracted/: Cargo.toml  lib.rs  rust-toolchain.toml
scripts/: _extract_shares.sh  drive_manager.py  run-ct-local.sh  run-proofs.sh  stage_legacy_setup.sh  verify_roundtrip.sh
scripts/tests/: lint.sh  test_cleanup_partial_rollback.sh  test_highlighted_line.py  test_imported_wrap_id.py  test_logfile_redaction.py  test_pexpect_two_step_e2e.py  test_resolve_out_dir.py  test_run_proofs_smoke.sh  test_stage_extraction.sh  test_stage_out_dir_hygiene.sh  test_timeout_redaction.py  test_transcript_parity.sh  test_verify_id_case.sh  test_verify_out_dir_unset.sh  test_version_pin.py  test_yhm_shares_file_unset.py
spec/: README.md  gf256.cry  lagrange.cry  lagrange_t3_samples.cry  properties.cry
src/: legacy.rs  lib.rs  main.rs  parse.rs  recover.rs  resplit.rs  secret.rs
tests/: cli.rs  dudect_harness_form.rs  gen_fixture.rs  memcheck_harness_form.rs  recover_byte_equality.rs
tests/data/: toy_2of3.txt  toy_2of3_aes128.txt  toy_2of3_aes192.txt  victim_pubkey.pem
tests/fixtures/device-transcripts/: README.md  yubihsm-manager-tui-prompts.txt  yubihsm-shell-list-objects.txt
tests/fixtures/device-transcripts/v_2.7.1/: yubihsm-manager-tui-prompts.txt  yubihsm-setup-ksp.txt  yubihsm-shell-get-public-key.txt  yubihsm-shell-list-objects.txt  yubihsm-shell-put-wrapped-authfail.txt
tests/fixtures/device-transcripts/v_2.7.3/: yubihsm-setup-ksp.txt  yubihsm-shell-get-public-key.txt  yubihsm-shell-put-wrapped-ok.txt
tests/fixtures/device-transcripts/v_2.7.4/: yubihsm-manager-tui-prompts.txt  yubihsm-setup-ksp.txt  yubihsm-shell-get-public-key.txt  yubihsm-shell-list-objects.txt  yubihsm-shell-put-wrapped-authfail.txt  yubihsm-shell-put-wrapped-ok.txt
valgrind/: memcheck-suppressions.txt
