[package]
name = "yubihsm-share-converter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
# R9-H1: pinning the MSRV at 1.85 (was 1.70). MSRV 1.85 is the minimum
# that parses Cargo.lock v4 (lockfile v4 stabilised in Cargo 1.78); we
# bump to 1.85 for headroom against future stabilisation creep.
# `std::io::IsTerminal` (used by the disk-stdout gate) was stabilised in
# 1.70, so the gate's import remains available — that historical fact is
# still supporting narrative for the pin, but the lockfile-v4 floor is
# now the load-bearing reason. A downstream packager with an older
# toolchain hits a clear `requires rustc 1.85.0 or newer`.
rust-version = "1.85"
description = "Recover yubihsm-setup (rusty-secrets 0.0.2, GF poly 0x11D) wrap-key shares and re-split them for yubihsm-manager (hand-rolled GF poly 0x11B Shamir split; manager-format output)."
publish = false
default-run = "yubihsm-share-converter"

[dependencies]
zeroize = { version = "1.9", features = ["zeroize_derive"] }
constant_time_eq = "0.3"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
# R9-H3: vsss-rs removed. The resplit module hand-rolls GF(2^8)/poly-0x11B
# Shamir split using Secret-controlled buffers (page-aligned, MADV_DONTDUMP,
# zeroed-on-drop). vsss-rs 5.x leaked share bytes through internal coefficient
# and per-share accumulator buffers that were outside our zeroize control.
rand = "0.8.6"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3"
# R11-C2 / R11-V2-residue: dhat is the heap-allocation profiler used by the
# `recover_makes_at_most_one_heap_alloc` regression test in src/main.rs.
# Listed under [dev-dependencies] so it is *not* linked into release builds;
# the matching `#[cfg(test)] #[global_allocator]` lives at the src/main.rs
# crate root (M3 lock-in). Semver range, not exact pin (SD-9).
dhat = "0.3"
# R14-01-v2: the `mutants` proc-macro crate provides the `#[mutants::skip]`
# attribute used (gated via `#[cfg_attr(test, mutants::skip)]`) on
# `fn inv` in src/legacy.rs. The skip resolves the equivalent-mutation
# survivor `src/legacy.rs:98:32: replace | with ^ in inv` (mathematical
# proof recorded inline at the call site: bit-disjoint operands make
# `|` and `^` byte-identical under the disjoint-mask invariant). The
# crate is a no-op at compile time (the macro returns its input
# unchanged); it carries no runtime weight. Listed under
# [dev-dependencies] so release builds do not link it; the
# `cfg_attr(test, ...)` wrapper means production code never references
# the crate, only test-mode compilation (which cargo-mutants uses).
mutants = "0.0.3"

# R23-01: cachegrind-driven CT verification harness; runs under
# `valgrind --tool=cachegrind --branch-sim=yes` in
# `.github/workflows/cachegrind.yml`. The harness provides its own
# `fn main()` (takes `--kernel <K> --input-class <C>` argv), so
# `harness = false` bypasses libtest. The 3 production GF(2^8)
# kernels (resplit::mul_aes, legacy::mul, legacy::inv) plus a
# synthetic `inv_aes_chain = mul_aes^254` are wrapped in
# `#[inline(never)]` functions so cachegrind's per-function
# attribution can find them. See FIX_PLAN.html #r23-plan + #r23-01
# + #r23-v2-changelog for full rationale.
[[bench]]
name = "cachegrind_kernels"
path = "benches/cachegrind_kernels.rs"
harness = false

# R24-01 v3 LOCAL-ONLY: hand-rolled minimal dudect harness (NO
# dudect-bencher dev-dep; that crate's transitive deps include clap 2.34 →
# unsound atty per RUSTSEC-2021-0145, see #r22-01 SUPERSEDED record).
# Welch's t-test + paper-§3.2 percentile cropping; depends only on
# stdlib + the existing `rand 0.8` dev-dep at line 28. Invoked via
# `scripts/run-ct-local.sh dudect` (LOAD-BEARING local discharge surface
# per v3 LOCAL-ONLY scope; no CI workflow exists). See FIX_PLAN.html
# #r24-plan + #r24-01 + #r24-v3-changelog for full rationale.
[[bench]]
name = "dudect_kernels"
path = "benches/dudect_kernels.rs"
harness = false

# R25-01 LOCAL-ONLY: TIMECOP-style memcheck-taint harness (canonical
# Bernstein/SUPERCOP convention; same dynamic-taint technique BoringSSL +
# libsodium use). Marks secret bytes as undefined via the
# VALGRIND_MAKE_MEM_UNDEFINED client request (hand-rolled inline-asm FFI
# macro per SD-R25-1 planner default; zero new Cargo deps mirroring
# R24 v3 + R26 invariant). Invoked via `scripts/run-ct-local.sh memcheck`
# (LOAD-BEARING local discharge surface per SD-R25-5; no CI workflow per
# SD-R25-6). See FIX_PLAN.html #r25-plan + #r25-01.
[[bench]]
name = "memcheck_kernels"
path = "benches/memcheck_kernels.rs"
harness = false

[profile.release]
panic = "abort"
strip = "symbols"
codegen-units = 1
lto = "thin"
overflow-checks = true
debug = false

# R23-01: cachegrind needs the binary's symbol table (`.symtab` +
# `.strtab`) AND DWARF line tables so `cg_annotate` can attribute
# per-function counters (and ideally per-source-line counters too).
# `cargo bench` inherits `[profile.release]` which sets
# `strip = "symbols"` — that strips both debuginfo AND symbols,
# leaving cg_annotate with only `???:???` per-function rows.
# Empirically `strip = "debuginfo"` was not enough (the merged
# strip profile-key still wiped `.symtab`); `strip = "none"` is
# the most aggressive symbol-preservation setting. We also add
# `debug = "line-tables-only"` to emit DWARF `.debug_line` sections
# (compact subset of full debuginfo — just file:line maps for each
# instruction) so cg_annotate can attribute to source lines, not
# just function names. The emitted instruction bytes are byte-
# identical to release (strip + debuginfo are post-codegen layout-
# only changes); production builds remain unaffected.
[profile.bench]
inherits = "release"
strip = "none"
debug = "line-tables-only"
