[package]
name = "yubihsm-share-converter-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"

[dependencies.yubihsm-share-converter]
path = ".."

# R12-Phase-D / item #6: three libFuzzer harnesses (parse + recover +
# resplit). Each runs against its own corpus and reports crashes via
# libFuzzer's standard infrastructure. The corpus seeds live in
# `fuzz/corpus_seed/<target>/`; the CI workflow copies them to
# `fuzz/corpus/<target>/` before invoking cargo-fuzz.

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "recover"
path = "fuzz_targets/recover.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resplit"
path = "fuzz_targets/resplit.rs"
test = false
doc = false
bench = false
